# goidama

./: .gitignore  README.md  command.txt  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 1ccf14f34c1a_auto_generate_migration.py
appserver/: app.py  settings.py
appserver/apps/: __init__.py
appserver/apps/account/: endpoints.py  models.py  schemas.py
appserver/apps/account/schemas/: auth.py
appserver/apps/capsule/: endpoints.py  models.py  schemas.py
appserver/apps/capsule/services/: add_content_service.py  check_in_service.py  create_service.py  friend_timeline_service.py  get_detail_service.py  invite_service.py  (+4 more)
appserver/apps/friend/: endpoints.py  models.py  schemas.py  service.py
appserver/apps/notification/: endpoints.py  models.py  schemas.py
appserver/core/: geo.py  local_storage.py  reverse_geocode.py  s3_storage.py  scheduler.py
appserver/database/: db.py  session.py
appserver/libs/datetime/: calender.py
goidama-web/: next.config.ts  package-lock.json  package.json  taildwind.config.ts
goidama-web/src/: middleware.ts
goidama-web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
goidama-web/src/constants/: skins.ts
goidama-web/src/hooks/: useAuth.ts  useCapsule.ts  useCapsuleCreate.ts  useCheckIn.ts  useFriend.ts  useGps.ts  useNotification.ts  useTimeline.ts
goidama-web/src/lib/: axios.ts  queryClient.ts
goidama-web/src/services/: auth.service.ts  capsule.service.ts  friend.service.ts  notification.service.ts
goidama-web/src/store/: authStore.ts  capsuleStore.ts  uiStore.ts
goidama-web/src/types/: auth.ts  capsule.ts  friend.ts  notification.ts
goidama-web/src/utils/: date.ts  geo.ts
tests/: conftest.py
tests/apps/account/: test_endpoints.py
(+70 files in other folders)
